[gd_scene load_steps=10 format=2]

[ext_resource path="res://Actors/Boss.gd" type="Script" id=1]
[ext_resource path="res://assets/enemy.png" type="Texture" id=2]
[ext_resource path="res://src/UserInterface/UI Boss Health Bar.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/font_title.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/bosshp.wav" type="AudioStream" id=5]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( -0.0765228, 46.5714, -22.833, 46.189, -38.1315, 42.7468, -47.8843, 35.48, -52.8564, 27.0658, -54.5774, 18.2692, -54.0037, 5.07425, -48.6493, -13.0927, -35.8368, -32.0246, -20.9207, -43.116, -7.53454, -47.5144, 0.114708, -47.8968, 10.25, -46.9407, 21.5326, -42.3511, 32.624, -34.1282, 44.8628, -20.5507, 52.8945, -2.00131, 54.6156, 11.3849, 54.8069, 19.2254, 52.7033, 27.4483, 46.0102, 37.5836, 35.6837, 43.3205, 22.2975, 46.3802 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 304.158, 307.885 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 241.105, 10.5328 )

[sub_resource type="Animation" id=4]
resource_name = "WIN"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TransitionLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Boss" type="KinematicBody2D" groups=[
"Boss",
]]
collision_layer = 256
collision_mask = 5
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3.05176e-05, 0 )
scale = Vector2( 7.54033, 7.33097 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprite"]
occluder = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 31.1127 )
shape = SubResource( 2 )

[node name="StompArea2D" type="Area2D" parent="."]
position = Vector2( 0, -66.4549 )
collision_layer = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompArea2D"]
position = Vector2( 3.05176e-05, -239.729 )
shape = SubResource( 3 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -1.26123, -4.40953 )
scale = Vector2( 8.52602, 10.9888 )
rect = Rect2( -50, -33, 100, 66 )
process_parent = true
physics_process_parent = true

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
margin_left = -183.783
margin_top = -428.891
margin_right = -183.783
margin_bottom = -428.891
caution_zone = 0.75
danger_zone = 0.3

[node name="Label" type="Label" parent="."]
margin_left = -100.0
margin_top = -521.0
margin_right = 111.0
margin_bottom = -453.0
custom_fonts/font = ExtResource( 4 )
text = "The Boss"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vulnerable" type="Label" parent="."]
margin_left = -114.0
margin_top = -600.0
margin_right = 136.0
margin_bottom = -545.0
custom_fonts/font = ExtResource( 4 )
text = "vulnerable"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="TransitionLayer"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/WIN = SubResource( 4 )

[node name="bossout" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="area_entered" from="StompArea2D" to="." method="_on_StompArea2D_area_entered"]
